Bug 459229 - Some messages of the module are displayed in English
Summary: Some messages of the module are displayed in English
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_networkmanagement (other bugs)
Version First Reported In: 5.25.5
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Jan Grulich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-16 16:21 UTC by Paolo Zamponi
Modified: 2022-09-17 07:29 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paolo Zamponi 2022-09-16 16:21:07 UTC
SUMMARY
***
I hope I've chosen the right component :)
Anyway, in the bottom part of Systemsettings -> Connections there are three buttons (Configutation, and Add/Remove connction): hovering on them cause English text to be displayed, and if I click on each of them, the resulting windows are in English as well. All those messages come from "plasmanetworkmanagement-kcm.po".
 
OBSERVED RESULT
Some messages are shown in English.

EXPECTED RESULT
All those messages should be displayed in my locale.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20220914
KDE Plasma Version: 5.25.5
KDE Frameworks Version: 5.98.0
Qt Version: 5.15.5
Kernel Version: 5.19.8-1-default (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION
It occours in more than a language
Comment 1 Nate Graham 2022-09-16 20:55:10 UTC
The strings appear to be wrappe din the correct translation tags; what language are you missing text in?
Comment 2 Paolo Zamponi 2022-09-16 21:22:35 UTC
Hi, it's Italian... but it's the same for Swedish and Portuguese too (all those po-es seems to be fully translated).
Comment 3 Nate Graham 2022-09-16 21:35:15 UTC
Hmm, how strange. I'll CC some localization folks who can hopefully see what plasma-nm is doing wrong here.
Comment 4 Albert Astals Cid 2022-09-16 22:01:07 UTC
All those i18n calls in qml need the i18nd version and specify the correct domain (i.e. plasmanetworkmanagement-kcm) otherwise they are searched in the application catalog i.e. systemsettings and obviously not found.
Comment 5 Bug Janitor Service 2022-09-16 23:08:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-nm/-/merge_requests/150
Comment 6 Bug Janitor Service 2022-09-16 23:31:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-nm/-/merge_requests/151
Comment 7 Nicolas Fella 2022-09-17 07:28:22 UTC
Git commit e914305c593a55e3beb7825dd12eebf1e3a7361e by Nicolas Fella.
Committed on 16/09/2022 at 23:30.
Pushed by aacid into branch 'master'.

[kcm] Set KLocalizedContext for QQuickWidget

This is needed for i18n to work and got lost accidentally

M  +5    -0    kcm/kcm.cpp

https://invent.kde.org/plasma/plasma-nm/commit/e914305c593a55e3beb7825dd12eebf1e3a7361e
Comment 8 Albert Astals Cid 2022-09-17 07:29:58 UTC
Git commit 0f4db42d889fcc956f2174c798af9bde7a38e0a2 by Albert Astals Cid, on behalf of Nicolas Fella.
Committed on 17/09/2022 at 07:29.
Pushed by aacid into branch 'Plasma/5.26'.

[kcm] Set KLocalizedContext for QQuickWidget

This is needed for i18n to work and got lost accidentally
(cherry picked from commit e914305c593a55e3beb7825dd12eebf1e3a7361e)

M  +5    -0    kcm/kcm.cpp

https://invent.kde.org/plasma/plasma-nm/commit/0f4db42d889fcc956f2174c798af9bde7a38e0a2