[kcm] Set KLocalizedContext for QQuickWidget

This is needed for i18n to work and got lost accidentally

BUG: 459229